GearsetPOC/force-app/main/default/objects/Eins_CompensationLimitAmountSettings__c/Eins_CompensationLimitAmountSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Compensation Limit Amount Settings</label>
</CustomObject>