GearsetPOC/force-app/main/default/objects/Eins_CompensationLimitAmountSettings__c/fields/EUR__c.field-meta.xml
<CustomField>
    <fullName>EUR__c</fullName>
    <label>EUR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>