GearsetPOC/force-app/main/default/objects/Eins_CompensationLimitAmountSettings__c/fields/GBP__c.field-meta.xml
<CustomField>
    <fullName>GBP__c</fullName>
    <label>GBP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>