GearsetPOC/force-app/main/default/objects/Eins_CompensationLimitAmountSettings__c/fields/USD__c.field-meta.xml
<CustomField>
    <fullName>USD__c</fullName>
    <label>USD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>